# tessera

./: .gitignore  CLAUDE.md  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: aligners.md  detection-methods.md  gap-analysis.md  reference-panels.md
docs/superpowers/plans/: 2026-06-28-nextclade-seed-source.md  2026-06-30-donor-reattribution.md  2026-07-01-auto-typing-in-recruitment.md  2026-07-01-harder-harness-phase1.md  2026-07-01-lineage-aware-panel-selection.md  2026-07-01-plurality-major-parent.md  2026-07-01-type-lineages.md  2026-07-02-donor-undercovered-caveat.md  2026-07-02-harder-harness-phase2.md
docs/superpowers/specs/: 2026-06-28-nextclade-seed-source-design.md  2026-06-30-donor-reattribution-design.md  2026-07-01-auto-typing-in-recruitment-design.md  2026-07-01-harder-harness-phase1-design.md  2026-07-01-lineage-aware-panel-selection-design.md  2026-07-01-plurality-major-parent-design.md  2026-07-01-type-lineages-design.md  2026-07-02-donor-undercovered-caveat-design.md  2026-07-02-harder-harness-phase2-design.md
example_data/: README.md  cryptic_insert.msa.fasta  divergent.msa.fasta  make_example.py
recomfi/: msa.py  recomb.py  recomfi.py
src/recomfi/: __init__.py
src/recomfi/aligners/: __init__.py  base.py  cactus.py  mafft.py  minimap2.py  progressivemauve.py  sibeliaz.py
src/recomfi/cli/: cmd_build_panel.py  cmd_curate_panel.py  cmd_detect.py  cmd_fill_references.py  cmd_find_references.py  cmd_msa.py  cmd_recomb.py  main.py
src/recomfi/converters/: hal_to_maf.py  maf_to_fasta.py  mafft_merge.py  xmfa_to_fasta.py
src/recomfi/core/: __init__.py  binaries.py  cache.py  errors.py  io.py  logging.py  plugins.py  process.py
src/recomfi/discover/: blast.py  fetch.py  iterate.py  nextclade.py  panel.py  pool.py  run.py
src/recomfi/msa/: build.py
src/recomfi/recomb/: clusters.py  coverage.py  diagnostics.py  hmm.py  pango.py  regions.py  report.py  run.py  similarity.py  stats.py  typing.py
src/tessera/: __init__.py
src/tessera/aligners/: __init__.py  base.py  cactus.py  mafft.py  minimap2.py  progressivemauve.py  sibeliaz.py
src/tessera/cli/: cmd_build_panel.py  cmd_curate_panel.py  cmd_detect.py  cmd_fill_references.py  cmd_find_references.py  cmd_msa.py  cmd_recomb.py  cmd_type_lineages.py  main.py
src/tessera/converters/: __init__.py  hal_to_maf.py  maf_to_fasta.py  sam_to_fasta.py
src/tessera/core/: cache.py  errors.py  executors.py  io.py  logging.py  plugins.py  process.py
src/tessera/discover/: __init__.py  blast.py  iterate.py  lineage_assign.py  nextclade.py  panel.py  pool.py  run.py
src/tessera/msa/: __init__.py  build.py
src/tessera/recomb/: __init__.py  analyze.py  barcode.py  bootscan.py  consensus.py  coverage.py  ensemble.py  hmm.py  maxchi.py  pango.py  reattribute.py  regions.py  report.py  report_assets.py  report_context.py  report_html.py  report_plots.py  report_text.py  run.py  siblings.py  similarity.py  stats.py  threeseq.py  typing.py
tests/: conftest.py  factories.py
tests/integration/: test_calibration.py  test_example_data_io.py  test_genome_io.py  test_msa_end_to_end.py  test_msa_progressivemauve.py  test_realistic_recomb.py  test_recomb_pipeline.py
tests/unit/: test_aligner_backends.py  test_aligner_params.py  test_analyze.py  test_attribution.py  test_barcode.py  test_bootscan.py  test_cache.py  test_cli_deep_typing.py  test_cli_keep_recombinant.py  test_cli_nextclade.py  test_clusters.py  test_consensus.py  test_converters.py  test_coverage.py  test_coverage_reconcile.py  test_deep_typing.py  test_diagnostics.py  test_discover.py  test_ensemble.py  test_harness_scoring.py  test_hmm.py  test_io.py  test_iterate.py  test_lineage_assign.py  test_lineage_select.py  test_maxchi.py  test_mosaic.py  test_ncbi_lineage_consolidate.py  test_ncbi_lineage_sidecar.py  test_nextclade.py  test_panel.py  test_pango.py  test_plugins.py  test_pool.py  test_reattribute.py  test_regions.py  test_report_typed.py  test_run.py  test_select_from_lineage.py  test_siblings.py  (+5 more)
validation/: README.md  attribution-results.md  datasets.json  fetch.py  run_deep_typing.py  run_hybrids.py  run_validation.py
